sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: value asInstanceOF is not a member of Int
      ecart=(ecart.asInstanceOF[Double]/1.3).asInstanceOf[Int]
                   ^